syntax = "proto3";
import "com/glance/analytics/spaces/client/api/zapp_content.proto";
import "com/glance/analytics/spaces/client/api/element_location.proto";
import "com/glance/analytics/spaces/client/api/interaction.proto";
import "com/glance/analytics/spaces/client/api/render_event.proto";

option java_multiple_files = true;
option java_package = "com.glance.analytics.spaces.client.internal"; // Bug compatibility

package com.glance.analytics.spaces.client.api;

message TargetContentElement {
  option deprecated = true;
  oneof content {
    ZappContentElement zapp_content = 1;
  }
}